samples/_failures_safe/1761501484_eb7c02_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d8c259ef.c: In function ‘main’:
./samples/SAFE/__tmp_d8c259ef.c:170:9: error: expected declaration or statement at end of input
  170 |         if (k >= token_count) break;
      |         ^~
./samples/SAFE/__tmp_d8c259ef.c:170:9: error: expected declaration or statement at end of input
